<resources>
    <string name="app_name">Homeschool Helper</string>
    <string name="course_name">Course Name</string>
    <string name="course_tracks">Tracks</string>
    <string name="duration">Duration</string>
    <string name="description">Description</string>
    <string name="price" />
    <string name="name">Name</string>
    <string name="table_layout_4_open" />
    <string name="tracks" />
    <string name="subject">Subject</string>
    <string name="hours">Hours</string>
    <string name="core">Core</string>
    <string name="student_name">Student Name</string>
    <string name="subjectUpd">Subject</string>
    <string name="hoursUpd">Hours</string>
    <string name="core_yes_noUpd">Core: yes/no</string>
    <string name="update_item">Update Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="student_nameMain">Student Name</string>
    <string name="subjectMain">Subject</string>
    <string name="hoursMain">Hours</string>
    <string name="core_yes_noMain">Core: yes/no</string>
    <string name="todo">View List</string>
    <string name="main_page">Add</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="grade">Grade</string>
    <string name="add_student">Add Student</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logo_description">App Logo</string>
    <string name="google_verification">Google Verification</string>
    <string name="verification">Ps. Use the verification code sent to the email you entered.</string>


</resources>