<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353738"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

<!--    <EditText-->
<!--        android:id="@+id/editTextEmail"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/imageViewLogo"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:hint="@string/email_hint"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:padding="12dp" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/editTextEmail"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:hint="@string/password_hint"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="12dp" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_input"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            tools:targetApi="p" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_input1"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_google"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>